--- a/package.json
+++ b/package.json
@@ -36,5 +36,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://myusername.github.io/my-app"
+  "homepage": "https://mackenzieraeclark.github.io/User-Directory"
 }
